src/pages/index.module.css
/* stylelint-disable docusaurus/copyright-header */

/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem;
  position: relative;
  overflow: hidden;
}

@media screen and (max-width: 966px) {
  .heroBanner {
    padding: 2rem;
  }
}

.buttons {
  display: flex;
}

.heroImageContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}

.heroTextContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

